feat: align sync and reading capabilities
